# ssedit

./: README.md  meson.build  meson.options
scripts/: glyphs.txt  strip_font.py
src/: clibpoard.hpp  clipboard.cpp  config.cpp  config.hpp  decode.cpp  decode.hpp  encode.cpp  encode.hpp  features.hpp  formats.cpp  formats.hpp  icons.cpp  icons.hpp  image.cpp  image.hpp  log.cpp  log.hpp  shapes.cpp  shapes.hpp  ssedit.cpp  utils.cpp  utils.hpp
src/backends/: jpeg.cpp  jpeg.hpp  jxl.cpp  jxl.hpp  png.cpp  png.hpp
